# pinchot-c-api

./: CAPISources.cmake  CMakeLists.txt  LICENSE.txt  README.md  VersionInfo.cmake
doc/: doxygen.config
examples/00-configure-and-connect/: CMakeLists.txt
examples/00-configure-and-connect/src/: configure_and_connect.cpp
examples/01-basic-scanning/: CMakeLists.txt
examples/01-basic-scanning/src/: basic_scanning.cpp
examples/02-advanced-scanning/: CMakeLists.txt
examples/02-advanced-scanning/src/: advanced_scanning.cpp
examples/03-custom-application/: CMakeLists.txt
examples/03-custom-application/src/: main.cpp
scripts/: parse-version.py
src/: AlignmentParams.cpp  AlignmentParams.hpp  BroadcastConnectMessage.cpp  BroadcastConnectMessage.hpp  DataFormats.cpp  DataFormats.hpp  DataPacket.cpp  DataPacket.hpp  DisconnectMessage.cpp  DisconnectMessage.hpp  Enums.hpp  ImageRequestMessage.cpp  ImageRequestMessage.hpp  NetworkIncludes.hpp  NetworkInterface.cpp  NetworkInterface.hpp  NetworkTypes.hpp  NetworkingTypes.hpp  PinchotConstants.hpp  Point2D.hpp  ProductInfo.hpp  Profile.cpp  Profile.hpp  ScanHead.cpp  ScanHead.hpp  ScanHeadConfiguration.cpp  ScanHeadConfiguration.hpp  ScanHeadReceiver.cpp  ScanHeadReceiver.hpp  ScanHeadSender.cpp  ScanHeadSender.hpp  ScanHeadShared.cpp  ScanHeadShared.hpp  ScanHeadTemperatures.hpp  ScanManager.cpp  ScanManager.hpp  ScanRequestMessage.cpp  ScanRequestMessage.hpp  ScanWindow.cpp  ScanWindow.hpp  (+14 more)
